--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "homepage": "https://kblessmi2001.github.io",
-  "name": "my-portfolio",
+  "name": "blessmi-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.1",
+    "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^4.0.1",
-    "react-icons": "^4.11.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.10.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
@@ -47,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.67.0"
   }
 }
